# threadpools

./: Cargo.toml  README.md
benches/: standardpool_bench.rs
examples/: parallel_sum.rs  simple_sleep.rs
src/: lib.rs  standardpool.rs
src/pools/: mod.rs  standardpool.rs
src/support/: common.rs  mod.rs  tasks.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  slices_utils.rs  tasks.rs
tests/: standardpool_test.rs
