[package]
name = "threadpools"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["thread-pool", "concurrency", "parallel"]
categories = ["concurrency"]
readme = "README.md"

[[bench]]
name = "standardpool_bench"
harness = false

[dev-dependencies]
test_utils = { path = "./test_utils" }
